# hilpo

./: .gitignore  CLAUDE.md  README.md  REPRODUCE.md  pyproject.toml
agents/: cli.py  config.py  pipeline.py  rate_limit.py  run_agent_baseline.py  tools.py
apps/backend/: .env.example  main.py  pyproject.toml
apps/backend/app/: config.py  exceptions.py  gcs.py  main.py
apps/backend/app/repositories/: annotations.py  posts.py
apps/backend/app/routers/: annotations.py  posts.py
apps/backend/app/schemas/: annotations.py  posts.py
apps/backend/app/services/: annotations.py  posts.py
apps/backend/migrations/: 001_initial_schema.sql  002_experiment_infra.sql  003_descriptor_agent.sql  003_taxonomy_descriptions.sql  005_prompt_version_run_tracking.sql  008_protegi_loop.sql  009_add_format_obsessed.sql  010_add_format_reel_behind_the_scenes.sql  014_agent_bounded_observability.sql  015_descriptor_v1_freetext.sql  016_rule_based_optimization.sql  017_reasoning_tokens.sql
docs/: agent_perspective.md  architecture.md  conventions.md  data.md  evaluation.md  human_perspective.md  note_intelligence_artificielle.md  phases.md  planning.md  project.md  prompts_v0.md  related_work.md  schema.md  stack.md
hilpo/: agent.py  async_inference.py  db.py  errors.py  gcs.py  prompts_v0.py  rewriter.py  schemas.py
milpo/: agent.py  agent_common.py  async_inference.py  bandits.py  cli.py  client.py  config.py  db.py  dev_split.py  dsl.py  dsl_vocabulary.py  e2e_inference.py  errors.py  eval.py  eval_cache.py  gcs.py  inference.py  inference_core.py  objective.py  oracle.py  (+8 more)
(+102 files in other folders)
